--- a/zzzzzzzzzzzzzzagradecimientos.html
+++ b/zzzzzzzzzzzzzzagradecimientos.html
@@ -10,10 +10,10 @@
 <body>
   <button> <a href="./index.html"> come back</a></button>
   <h1>   thanks</h1>
-  <h2> programetors sebatian origel </h2>
-  <h2> searchers juanpablo samanta fer</h2>
-  <h2> logo desiegner fer</h2>
-  <h2> our documet with more information and sourcers https://docs.google.com/document/d/1w_1_tSxnTGZvPci74gFncHaMUqoczRmKwE84UgQqT2Y/edit?usp=sharing  </h2>
+  <h2> Programmer  Sebatian Origel </h2>
+  <h2> Researchers Juanpablo Samanta Fer</h2>
+  <h2> Logo designer Fer</h2>
+  <h2> Our documet with more information and sourcers https://docs.google.com/document/d/1w_1_tSxnTGZvPci74gFncHaMUqoczRmKwE84UgQqT2Y/edit?usp=sharing  </h2>
     <link rel="stylesheet" href="">
 </body>
 </html>
