--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         </nav>
     </header>
     <section class="principal" id="principal">
-        <h1>   reducing energy </h1>
+        <h1>   Reducing energy </h1>
  
         
 <button class="principal buttson"><a href="./zzzzzzzzzzzzzzagradecimientos.html"> creators</a></button>
 </section>
 <section class="two" id="two">
-    <h2> here some tips to reduse energy consuption </h2>
-    <h2> tip 1 use solar panels</h2>
- <h2> tip 2  when yo go to a trip with your family  turn of  the power genartor exept refrigereitor</h2>
-    <h2 > tip 3 when you go to sleep trurn of all lights and computers</h2>
-    <h2>  tip 4 use natural lights in the day you don´t need electricyty lights </h2>
-    <h2> tip 5 dont conect unused electronics </h2>
+    <h2> Here some tips to reduce energy consumption: </h2>
+    <h2> Tip 1: use solar panels  </h2>
+ <h2> Tip 2 when yo go to a trip with your family turn off the power genartor except refrigereitor</h2>
+    <h2 > Tip 3: when you go to sleep trurn of all lights and computers</h2>
+    <h2>Tip 4: use natural lights in the day you don´t need electricyty lights</h2>
+    <h2> Tip 5: don´t connect unused electronics </h2>
     
 </section>
 <section class="tres" id="tres">
-<h2> WHAT HAPPEN IF  </h2>
-<h2>  what happend if where a massive shotdawn  we have a video that explind best  </h2>
+<h2> WHAT HAPPENS IF...  </h2>
+<h2> What would happen if there was massive shotdown we have a video to explain it best.  </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2FyjYsgvFM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <h2> what happend if  the 433 world nuclear plants explote  first problay it will be some secure places in the world  in the first moments  but first will be a a mundial panic  the minus problem we be  the nuclear energy  after will be so much  contamition in all places and after will died all (:  </h2>
  <img src="./logo real.png" alt="">
