--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section class="two" id="two">
     <h2> Here some tips to reduce energy consumption: </h2>
     <h2> Tip 1: use solar panels  </h2>
- <h2> Tip 2 when yo go to a trip with your family turn off the power genartor except refrigereitor</h2>
+ <h2> Tip 2 when yo go to a trip with your family turn off the power genartor except refrigerator</h2>
     <h2 > Tip 3: when you go to sleep trurn of all lights and computers</h2>
     <h2>Tip 4: use natural lights in the day you don´t need electricyty lights</h2>
     <h2> Tip 5: don´t connect unused electronics </h2>
