--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h2 > Tip 3: when you go to sleep trurn of all lights and computers</h2>
     <h2>Tip 4: use natural lights in the day you don´t need electricyty lights</h2>
     <h2> Tip 5: don´t connect unused electronics </h2>
+    <img src="./Copia_de_How_to_stop_wasting_energy.jpg">
     
 </section>
 <section class="tres" id="tres">
