--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2> WHAT HAPPENS IF...  </h2>
 <h2> What would happen if there was massive shotdown we have a video to explain it best.  </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2FyjYsgvFM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <h2> Warning! If the 433 world nuclear plants explode: first problay it will be some secure places in the world in the first moments, but first will be a world panic the minus problem we be the nuclear energy ...after will be so much contamition in all places, lack of resoirces, etc. As you can see a CHAOS!</h2>
+ <h2> Warning! If the 433 world nuclear plants explode: first problay it will be some secure places in the world in the first moments, but first will be a world panic the minus problem we be the nuclear energy ...after will be so much contamition in all places, lack of resources, etc. As you can see a CHAOS!</h2>
  <img src="./logo real.png" alt="">
 </section>
 
